dice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dice
  template:
    metadata:
      labels:
        app: dice
    spec:
      containers:
      - name: dice
        image: dice-image:latest
        imagePullPolicy: IfNotPresent # Add this line
        ports:
        - containerPort: 80
