dice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dice-service
spec:
  selector:
    app: dice
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
